billLike 1차 작업